<resources>
    <string name="app_name">App Domestic v1.0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--INICIO UTILITARIOS-->
    <string name="accesToken">sk.eyJ1IjoieWVya292ZXJhbGV6YW1hIiwiYSI6ImNqM3JuMnQ4ZDAxZGMycG82aXprOXRmN28ifQ.fEbW8AqTRbDqQu0zaCdu3Q</string>
    <!--FIN UTILITARIOS-->
    
    <!--INICIO GENERALES-->
    <string name="id">Id</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="direccion">Dirección</string>
    <string name="departamento">Departamento</string>
    <string name="provincia">Provincia</string>
    <string name="distrito">Distrito</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="dni">DNI</string>
    <string name="finalizar">Finalizar</string>
    <string name="fechaSolicitud">Fecha de Solicitud</string>
    <string name="fechaInicio">Fecha de Inicio</string>
    <string name="fechaFin">Fecha de Fin</string>
    <string name="promociones">Promociones </string>
    <string name="estado">Estado</string>
    <string name="descripcion">Descripción</string>
    <string name="pendiente">Pendiente</string>
    <string name="servicios">Servicios</string>
    <string name="rubros">Rubros</string>
    <string name="establecer">Establecer</string>
    <string name="cargando">Cargando...</string>
    <string name="registrar">Registrar</string>
    <string name="buscar">Buscar</string>
    <string name="dataEmpty">Sin data encontrada</string>
    <string name="comentarios">Comentarios</string>
    <!--FIN GENERALES-->

    <!--INICIO MENUS-->
    <string name="verDetalle">Ver Detalle</string>
    <string name="verDetalleEnviados">Enviados</string>
    <string name="verContacto">Ver Contacto</string>
    <string name="verUbicacion">Ver Ubicacion</string>
    <string name="verHistorialTrabajos">Ver Historial de Trabajos</string>
    <string name="enviarSolicitud">Enviar Solicitud</string>
    <string name="contactar">Contactar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar</string>
    <!--FIN MENUS-->

    <!--INICIO PANTALLA LOGIN-->
    <string name="ingresar">Ingresar</string>
    <string name="ingresarFb">Ingresar con tu Facebook</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="version_app">AppDomestic</string>
    <!--FIN PANTALLA LOGIN-->

    <!--FIN PANTALLA LOGIN-->
    <string name="solicitudesCliente">Solicitudes</string>
    <string name="historialCliente">Historial</string>
    <!--FIN PANTALLA LOGIN-->

    <!--INICIO NAVIGATION DRAWER-->
    <string name="inicio">Inicio</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="buscarServicios">Buscar Servicios</string>
    <string name="historial">Historial</string>
    <string name="cerrarSesion">Cerrar Sesiòn</string>
    <string name="ayuda">Ayuda</string>
    <string name="acerca">Acerca</string>
    <string name="otros">Otros</string>
    <!--FIN NAVIGATION DRAWER-->

    <!--INICIO PANTALLA BUSCAR SERVICIOS-->
    <string name="tituloBuscarServicios">Datos de Servicio</string>
    <!--FIN PANTALLA BUSCAR SERVICIOS-->

    <!--INICIO PANTALLA REGISTRO USUARIO-->
    <string name="tituloRegistroUsuario">Datos Personales</string>
    <string name="subirFoto">Subir Foto</string>
    <!--FIN PANTALLA REGISTRO USUARIO-->

    <!--INICIO PANTALLA HISTORIAL TRABAJOS-->
    <string name="serviciosRealizados">Servicio Realizado</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="seleccionarFoto">Selec. Foto</string>
    <!--FIN PANTALLA HISTORIAL TRABAJOS-->

</resources>
