<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ic_house"
            android:icon="@drawable/ic_house"
            android:title="@string/inicio" />
        <item
            android:id="@+id/ic_mi_perfil"
            android:icon="@drawable/ic_mi_perfil"
            android:title="@string/miPerfil" />
        <item
            android:id="@+id/ic_search"
            android:icon="@drawable/ic_search"
            android:title="@string/buscarServicios" />
    </group>

    <item android:title="@string/otros">
        <menu>
            <item
                android:id="@+id/ic_sign_out"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/cerrarSesion" />

            <item
                android:id="@+id/ic_ayuda"
                android:icon="@drawable/ic_ayuda"
                android:title="@string/ayuda" />

            <item
                android:id="@+id/ic_informacion"
                android:icon="@drawable/ic_informacion"
                android:title="@string/acerca" />

        </menu>
    </item>

</menu>
