<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contenido_solicitudes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorFondoDefault"
    tools:context="pe.app.com.demo.ContenidoSolicitudes">

    <LinearLayout
        android:orientation="vertical"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_fecha_solicitud" />

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/fechaSolicitud"/>

            <TextView
                android:id="@+id/txtFechaSolicitud"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_servicios"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servicios"/>

            <TextView
                android:id="@+id/txtServicio"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_rubros"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rubros"/>

            <TextView
                android:id="@+id/txtRubro"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_fecha_inicio"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaInicio"/>

            <TextView
                android:id="@+id/txtFechaInicio"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_fecha_fin"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechaFin"/>

            <TextView
                android:id="@+id/txtFechaFin"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
