<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imagenSolucionador"
                    android:layout_width="@dimen/grid_item_image_size"
                    android:layout_height="@dimen/grid_item_image_size"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/ic_photo_defaulth"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtNombreSolucionador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/imagen"
                        android:text="@string/nombres"
                        android:textSize="@dimen/textoTituloHeader"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:id="@+id/txtEstadoAtencion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/pendiente"
                        android:textStyle="bold"
                        android:textSize="@dimen/textoDescripcion"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/servicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/servicios"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="@dimen/textoTitulo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtServicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="XXXXXX"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaInicio"
                        android:textSize="@dimen/textoTitulo"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/txtFechaInicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DD/MM/YY"
                        android:textSize="@dimen/textoDescripcion"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/finServicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaFin"
                        android:textSize="@dimen/textoTitulo"
                        android:textStyle="bold"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <TextView
                        android:id="@+id/txtFinServicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DD/MM/YY"
                        android:textSize="@dimen/textoDescripcion"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txtOptionPulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="&#8942;"
                    android:textSize="@dimen/textoOpcion"
                    android:layout_gravity="bottom|end"
                    android:paddingLeft="@dimen/activity_horizontal_margin"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
