<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorFondoDefault"
    tools:context="pe.app.com.demo.LoginActivity">

    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_logo"
            android:layout_gravity="center"
            android:id="@+id/imageView2" />

        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_mi_perfil"/>

                <LinearLayout
                    android:id="@+id/usuario_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_marginStart="20dp"
                        android:layout_width="200dp"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/txtUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/usuario"
                            android:textColorHint="@color/colorAccent"
                            android:inputType="text"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>
                    </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_password"/>

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_marginStart="20dp"
                        android:layout_width="200dp"
                        android:layout_height="match_parent">

                        <AutoCompleteTextView
                            android:id="@+id/txtPasword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/password"
                            android:textColorHint="@color/colorAccent"
                            android:inputType="textPassword"
                            android:maxLines="1"/>

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_marginTop="20dp"
                android:id="@+id/btnIngresar"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/ingresar"
                android:textColor="#FFFFFF"/>

            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/btnIngresarFB"
                android:background="@drawable/ic_fb"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="100dp"
                android:id="@+id/txtNombreApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_app"/>

            <Button
                android:id="@+id/btnfab"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:background="@drawable/ic_add_user"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
