<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorFondoDefault"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtNombreSolucionador"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/imagen"
                        android:text="@string/serviciosRealizados"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/textoTituloHeader"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtServicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="XXXXXX" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaInicio"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="@dimen/textoTitulo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtFechaInicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="DD/MM/YY"
                        android:textSize="@dimen/textoDescripcion" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/finServicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fechaFin"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textSize="@dimen/textoTitulo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtFinServicio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="DD/MM/YY"
                        android:textSize="@dimen/textoDescripcion" />

                </LinearLayout>

                <TextView
                    android:id="@+id/txtComentarios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Comentarios"
                    android:textSize="@dimen/textoDescripcion" />

                <RatingBar
                    android:id="@+id/rntgReputacion"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:clickable="true"
                    android:isIndicator="true"
                    android:paddingTop="8dp"
                    android:progressTint="#FDDB39"
                    android:rating="3"
                    android:secondaryProgressTint="#FDDB39" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
